# hack_nornickel

hack_nornickel/: Dockerfile  main.py  pyproject.toml  test.py
hack_nornickel/app/api/routers/: index.py  users.py
hack_nornickel/app/api/services/: users.py
hack_nornickel/app/utils/: colpali.py  preprocess_pdf.py
